Bug 137459 - Ctrl+Delete key behaves like Ctrl+Backspace in EditEng when no more content on the right.
Summary: Ctrl+Delete key behaves like Ctrl+Backspace in EditEng when no more content o...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.2.0
Keywords: preBibisect
Depends on:
Blocks: Writer-Comments
  Show dependency treegraph
 
Reported: 2020-10-13 15:58 UTC by J22Gim
Modified: 2021-09-21 21:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description J22Gim 2020-10-13 15:58:42 UTC
Description:
This happens when editing a comment both in Calc and in Writer. Additionally, it happens in Calc when editing text inside a cell, as I reported earlier (Bug 132317). So in the "component" field of this bug report I select Writer (I can't select more than 1 option).

So, in Calc and Writer, when editing text within a *comment*: When using CTRL+Del to erase everything to the right of the cursor, at some point it switches to the behavior of CTRl+Backspace instead of the intended CTRL+Del.

Steps to Reproduce:
1. Open Calc and place your cursor in any cell 
2. write any text, preferably 2 or more sentences (the longer the easier is to see this bug)
3. now place the cursor at the end of the 1st sentence and try to delete all the rest (ie all characters to the right of the period). To do that quickly I use CRTL+Del. 

Steps to Reproduce:
1. Open Calc or Writer and place a comment anywhere.
2. Write any text inside this comments, preferably 2 or more sentences (the more sentences the easier is to notice this bug)
3. now place the cursor at the end of the 1st sentence of this comment and try to delete all the rest (ie all characters to the right of the period). To do this quickly I use CRTL+Del. 

Actual Results:
Libreoffice starts erasing by 'eating' word by word to the RIGHT of the cursor as intended. But if you keep pressing CRTL+Del when no more words are available to the right to be deleted, Libreoffice unexpectedly switches to the behavior of CTRL+Backspace, actually erasing words to the LEFT or the cursor

Expected Results:
It should do what it is told to do: erase words to the RIGHT of the cursor. If there are no more words to the right of the cursor, stop deleting.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
This happens when using CTRL+Del. Using only Del key works as expected (although of course it is much slower because it deletes characters one by one).

Version: 7.0.2.2
Build ID: 00(Build:2)
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Ubuntu package version: 1:7.0.2_rc2-0ubuntu0.20.04.2
Calc: threaded
Comment 1 Dieter 2020-10-28 08:22:19 UTC
I confirm it in writer with

Version: 7.0.2.2 (x64)
Build ID: 8349ace3c3162073abd90d81fd06dcfb6b36b994
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: he-IL (de_DE); UI: en-GB
Calc: threaded

I agree, that Ctrl+Del should behave as Del
Comment 2 Justin L 2020-12-24 07:46:32 UTC
Cool - I learned a new trick.
Reproduced in bibisect-linux-43all as far back as I can go - LO 3.5.
Repro 7.2+.

This is probably true in all EditEng components.  Reproduced in Impress as well.
Comment 3 Justin L 2020-12-24 12:24:59 UTC
Proposed fix at http://gerrit.libreoffice.org/c/core/+/108265
Comment 4 Commit Notification 2021-01-15 15:05:57 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/79bfb54665b1a8dc2b932318eb6915d300772cff

tdf#137459 editeng: Ctrl+Del must only delete right

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Dieter 2021-02-20 16:26:37 UTC
VERIFIED with

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 28555fc345ac2ccdda0e4e0f3c812c646befe68b
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Justin, thanks for fixing it!
Comment 6 J22Gim 2021-09-21 21:21:52 UTC
It is fixed, THANKS!!!

Version: 7.2.1.2 / LibreOffice Community
Build ID: 20(Build:2)
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Ubuntu package version: 1:7.2.1~rc2-0ubuntu0.20.04.1~lo3
Calc: threaded